--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="page-wrapper">
     <div id="root"></div>
-    <script src="./Index.re"></script>
+    <script src="./index.js"></script>
   </div>
 </body>
 
